--- a/package.json
+++ b/package.json
@@ -11,10 +11,14 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tanem/react-nprogress": "^5.0.12",
+    "axios": "^0.27.2",
     "framer-motion": "^7.2.1",
     "next": "12.2.5",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
+    "sharp": "^0.30.7"
   },
   "devDependencies": {
     "@commitlint/cli": "^17.0.3",
